--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,12 @@ main .container__tablet {
   height: 100%;
   display: grid;
   grid-template-columns: 0.7fr repeat(5, 1fr) 1.3fr;
-  grid-template-rows: 1.3fr 1.5fr repeat(2, 1fr);
+  grid-template-rows: 2.3fr 1.5fr repeat(2, 1fr);
   gap: 0px 0px;
   grid-template-areas: "Menu BannerArea BannerArea BannerArea BannerArea BannerArea ContainerCapacitaciones" "Menu CapacitacioneSolicitud CapacitacioneSolicitud CatalogoFG CatalogoValmact Fichas ContainerCapacitaciones" "Menu TiendasEnLinea TiendasEnLinea TiendasEnLinea SobreNosotros SobreNosotros ContainerCapacitaciones" "Menu TiendasEnLinea TiendasEnLinea TiendasEnLinea Merch Merch ContainerCapacitaciones";
 }
 main .BannerArea {
   grid-area: BannerArea;
-  background-color: #f345d3;
 }
 main .ContainerCapacitaciones {
   grid-area: ContainerCapacitaciones;
@@ -30,15 +29,12 @@ main .ContainerCapacitaciones {
 }
 main .CapacitacioneSolicitud {
   grid-area: CapacitacioneSolicitud;
-  background-color: #1e6ea4;
 }
 main .CatalogoFG {
   grid-area: CatalogoFG;
-  background-color: #2b1ea4;
 }
 main .CatalogoValmact {
   grid-area: CatalogoValmact;
-  background-color: #4637d3;
 }
 main .SobreNosotros {
   grid-area: SobreNosotros;
@@ -46,7 +42,6 @@ main .SobreNosotros {
 }
 main .TiendasEnLinea {
   grid-area: TiendasEnLinea;
-  background-color: #840c40;
 }
 main .Merch {
   grid-area: Merch;
@@ -54,7 +49,6 @@ main .Merch {
 }
 main .Fichas {
   grid-area: Fichas;
-  background-color: #2511d8;
 }
 
 /*Banner Section*/
@@ -64,7 +58,6 @@ main .Fichas {
 }
 
 .carousel_banner {
-  background-color: #7d8589;
   width: 100%;
   height: 100%;
 }
@@ -78,8 +71,6 @@ main .Fichas {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 1rem;
-  overflow: hidden;
 }
 .banner__containers .banner__content__background {
   width: 100%;
@@ -95,7 +86,7 @@ main .Fichas {
   z-index: 11;
   top: 0;
   left: 0;
-  padding: 5rem;
+  padding: 0rem 2rem 4rem 5rem;
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -137,9 +128,9 @@ main .Fichas {
 
 .carousel_control_arrow {
   position: absolute;
-  bottom: -20px;
+  bottom: -3px;
   right: 20px;
-  width: 70px;
+  width: 60px;
   height: 30px;
   z-index: 13;
   display: flex;
@@ -151,8 +142,8 @@ main .Fichas {
 .carousel_control_arrow .carousel-control-next {
   border-radius: 5px;
   background-color: #0c7284;
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
 }
 .carousel_control_arrow .carousel-control-prev .carousel-control-next-icon,
 .carousel_control_arrow .carousel-control-prev .carousel-control-prev-icon,
@@ -163,20 +154,34 @@ main .Fichas {
 
 /* Banner Section*/
 /* Catalogos*/
-.CatalogoFG {
+.CatalogoFG,
+.CatalogoValmact {
   padding: 1rem;
 }
-.CatalogoFG .catalog__content {
+.CatalogoFG .catalog__content,
+.CatalogoValmact .catalog__content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #0c7284;
+  background: rgb(12, 70, 143);
+  background: linear-gradient(164deg, rgb(12, 70, 143) 32%, rgb(6, 42, 48) 93%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
   border-radius: 10px;
   text-align: center;
   height: 180px;
 }
-.CatalogoFG .catalog__content .catalog__content__image {
+.CatalogoFG .catalog__content .catalog__content__paper,
+.CatalogoValmact .catalog__content .catalog__content__paper {
+  width: 4rem;
+  height: 4rem;
+}
+.CatalogoFG .catalog__content .catalog__content__paper path,
+.CatalogoValmact .catalog__content .catalog__content__paper path {
+  fill: var(--white);
+}
+.CatalogoFG .catalog__content .catalog__content__image,
+.CatalogoValmact .catalog__content .catalog__content__image {
   width: 120px;
   height: 150px;
   border-radius: 5px;
@@ -185,16 +190,19 @@ main .Fichas {
   transform: translateY(-1.5rem);
   z-index: 14;
 }
-.CatalogoFG .catalog__content .catalog__content__title {
+.CatalogoFG .catalog__content .catalog__content__title,
+.CatalogoValmact .catalog__content .catalog__content__title {
   font-size: 15px;
   color: var(--white);
   padding: 0 0 2rem 0;
   text-wrap: balance;
 }
-.CatalogoFG .catalog__content .catalog__content__paragraph {
+.CatalogoFG .catalog__content .catalog__content__paragraph,
+.CatalogoValmact .catalog__content .catalog__content__paragraph {
   font-size: 13px;
 }
-.CatalogoFG .catalog__content .catalog__content__button {
+.CatalogoFG .catalog__content .catalog__content__button,
+.CatalogoValmact .catalog__content .catalog__content__button {
   background-color: var(--blue-button);
   color: var(--white);
   font-size: 15px;
@@ -204,4 +212,175 @@ main .Fichas {
   padding: 0.5rem;
 }
 
-/* Catalogos*//*# sourceMappingURL=main.css.map */
+.Fichas {
+  padding: 1rem;
+}
+.Fichas .catalog__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgb(12, 70, 143);
+  background: linear-gradient(164deg, rgb(12, 70, 143) 32%, rgb(6, 42, 48) 93%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
+  border-radius: 10px;
+  text-align: center;
+  height: 180px;
+}
+.Fichas .catalog__content .catalog__content__paper {
+  width: 4rem;
+  height: 4rem;
+}
+.Fichas .catalog__content .catalog__content__paper path {
+  fill: var(--white);
+}
+.Fichas .catalog__content .catalog__content__image {
+  width: 120px;
+  height: 150px;
+  border-radius: 5px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transform: translateY(-1.5rem);
+  z-index: 14;
+}
+.Fichas .catalog__content .catalog__content__title {
+  transform: translateY(28px);
+  font-size: 15px;
+  color: var(--white);
+  text-wrap: balance;
+}
+.Fichas .catalog__content .catalog__content__paragraph {
+  font-size: 13px;
+}
+.Fichas .catalog__content .catalog__content__button {
+  background-color: var(--blue-button);
+  color: var(--white);
+  font-size: 15px;
+  font-weight: 500;
+  text-decoration: none;
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+
+/* Catalogos*/
+/* Capacitaciones */
+.CapacitacioneSolicitud {
+  padding: 1rem 0 0 0;
+}
+
+.capacitaciones__content {
+  background: rgb(12, 70, 143);
+  background: linear-gradient(164deg, rgb(12, 70, 143) 32%, rgb(6, 42, 48) 93%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
+  border-radius: 10px;
+  height: 180px;
+  padding: 1rem;
+}
+.capacitaciones__content .capacitaciones__content__politicies {
+  font-size: 9px;
+  margin: 0;
+  color: var(--white);
+  padding-top: 1rem;
+}
+.capacitaciones__content .capacitaciones__content__title {
+  color: var(--white);
+  font-size: 22px;
+}
+.capacitaciones__content .capacitaciones__content__form form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.capacitaciones__content .capacitaciones__content__form form input {
+  background-color: rgba(93, 93, 115, 0.6392156863);
+  border: 0;
+  border-radius: 5px;
+  font-size: 10px;
+  padding: 5px;
+  color: var(--white);
+}
+.capacitaciones__content .capacitaciones__content__form form input::-moz-placeholder {
+  color: var(--white);
+}
+.capacitaciones__content .capacitaciones__content__form form input::placeholder {
+  color: var(--white);
+}
+.capacitaciones__content .capacitaciones__content__form form #submit {
+  background-color: var(--blue-button);
+  color: var(--white);
+  font-weight: 500;
+}
+.capacitaciones__content .capacitaciones__content__form form #correo {
+  width: 47%;
+}
+.capacitaciones__content .capacitaciones__content__form form #datetime,
+.capacitaciones__content .capacitaciones__content__form form #asistentes {
+  width: 32%;
+  color: var(--white);
+  font-size: 10px;
+}
+.capacitaciones__content .capacitaciones__content__form form #asistentes {
+  width: 15%;
+  color: var(--white);
+  font-size: 10px;
+}
+.capacitaciones__content .capacitaciones__content__form form #direccion {
+  width: 65%;
+}
+
+/* Capacitaciones */
+/*Tiendas En linea*/
+.TiendasEnLinea {
+  padding: 0rem 1rem;
+}
+.TiendasEnLinea .TiendaEnLinea__Content {
+  border-radius: 10px;
+  background-color: #0c468f;
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FG,
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FGM {
+  text-align: center;
+  padding: 1rem;
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FG h2,
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FGM h2 {
+  color: var(--white);
+  font-size: 20px;
+  font-weight: 300;
+  padding: 0;
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FG h2 span,
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FGM h2 span {
+  font-weight: 700;
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FG img,
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FGM img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo {
+  color: var(--white);
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo h3 {
+  font-size: 20px;
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo p {
+  font-size: 10px;
+  text-wrap: balance;
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo .TiendaEnLinea__codigo__discount {
+  border: 1px solid var(--white);
+  border-style: dashed;
+  width: auto !important;
+  padding: 0.5rem;
+  font-size: 18px;
+  border-radius: 10px;
+  text-transform: uppercase;
+  transform: translateY(-20px);
+}
+.TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo .TiendaEnLinea__codigo__discount span {
+  font-weight: 700;
+}
+
+/*Tiendas En linea*//*# sourceMappingURL=main.css.map */
