--- a/css/main.scss
+++ b/css/main.scss
@@ -15,9 +15,8 @@ main {
     height: 100%;
     display: grid;
     grid-template-columns: 0.7fr repeat(5, 1fr) 1.3fr;
-    grid-template-rows: 1.3fr 1.5fr repeat(2, 1fr);
+    grid-template-rows: 2.3fr 1.5fr repeat(2, 1fr);
     gap: 0px 0px;
-
     grid-template-areas:
       "Menu BannerArea BannerArea BannerArea BannerArea BannerArea ContainerCapacitaciones"
       "Menu CapacitacioneSolicitud CapacitacioneSolicitud CatalogoFG CatalogoValmact Fichas ContainerCapacitaciones"
@@ -26,7 +25,7 @@ main {
   }
   .BannerArea {
     grid-area: BannerArea;
-    background-color: #f345d3;
+    // background-color: #f345d3;
   }
   .ContainerCapacitaciones {
     grid-area: ContainerCapacitaciones;
@@ -34,15 +33,15 @@ main {
   }
   .CapacitacioneSolicitud {
     grid-area: CapacitacioneSolicitud;
-    background-color: #1e6ea4; //Revisar
+    //Revisar
   }
   .CatalogoFG {
     grid-area: CatalogoFG;
-    background-color: #2b1ea4;
+    // background-color: #2b1ea4;
   }
   .CatalogoValmact {
     grid-area: CatalogoValmact;
-    background-color: #4637d3;
+    // background-color: #4637d3;
   }
   .SobreNosotros {
     grid-area: SobreNosotros;
@@ -50,7 +49,7 @@ main {
   }
   .TiendasEnLinea {
     grid-area: TiendasEnLinea;
-    background-color: #840c40;
+    // background-color: #840c40;
   }
   .Merch {
     grid-area: Merch;
@@ -58,7 +57,7 @@ main {
   }
   .Fichas {
     grid-area: Fichas;
-    background-color: #2511d8;
+    // background-color: #2511d8;
   }
 }
 
@@ -68,7 +67,6 @@ main {
   height: 100%;
 }
 .carousel_banner {
-  background-color: #7d8589;
   width: 100%;
   height: 100%;
 }
@@ -80,8 +78,7 @@ main {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 1rem;
-  overflow: hidden;
+
   .banner__content__background {
     width: 100%;
     object-fit: cover;
@@ -95,7 +92,7 @@ main {
     z-index: 11;
     top: 0;
     left: 0;
-    padding: 5rem;
+    padding: 0rem 2rem 4rem 5rem;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -139,9 +136,9 @@ main {
 }
 .carousel_control_arrow {
   position: absolute;
-  bottom: -20px;
+  bottom: -3px;
   right: 20px;
-  width: 70px;
+  width: 60px;
   height: 30px;
   z-index: 13;
   display: flex;
@@ -152,8 +149,8 @@ main {
   .carousel-control-next {
     border-radius: 5px;
     background-color: #0c7284;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     .carousel-control-next-icon,
     .carousel-control-prev-icon {
       width: 20px;
@@ -163,7 +160,8 @@ main {
 
 /* Banner Section*/
 /* Catalogos*/
-.CatalogoFG {
+.CatalogoFG,
+.CatalogoValmact {
   padding: 1rem;
 
   .catalog__content {
@@ -171,11 +169,33 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #0c7284;
+    background: rgb(12, 70, 143);
+    background: -moz-linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    background: -webkit-linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    background: linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
     border-radius: 10px;
     text-align: center;
     height: 180px;
-
+    .catalog__content__paper {
+      width: 4rem;
+      height: 4rem;
+      path {
+        fill: var(--white);
+      }
+    }
     .catalog__content__image {
       width: 120px;
       height: 150px;
@@ -184,6 +204,7 @@ main {
       transform: translateY(-1.5rem);
       z-index: 14;
     }
+
     .catalog__content__title {
       font-size: 15px;
       color: var(--white);
@@ -204,4 +225,197 @@ main {
     }
   }
 }
+.Fichas {
+  padding: 1rem;
+  .catalog__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgb(12, 70, 143);
+    background: -moz-linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    background: -webkit-linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    background: linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
+    border-radius: 10px;
+    text-align: center;
+    height: 180px;
+    .catalog__content__paper {
+      width: 4rem;
+      height: 4rem;
+      path {
+        fill: var(--white);
+      }
+    }
+    .catalog__content__image {
+      width: 120px;
+      height: 150px;
+      border-radius: 5px;
+      object-fit: cover;
+      transform: translateY(-1.5rem);
+      z-index: 14;
+    }
+
+    .catalog__content__title {
+      transform: translateY(28px);
+      font-size: 15px;
+      color: var(--white);
+      text-wrap: balance;
+    }
+    .catalog__content__paragraph {
+      font-size: 13px;
+    }
+    .catalog__content__button {
+      background-color: var(--blue-button);
+      color: var(--white);
+      font-size: 15px;
+      font-weight: 500;
+      text-decoration: none;
+      border-radius: 10px;
+      padding: 0.5rem;
+    }
+  }
+}
 /* Catalogos*/
+
+/* Capacitaciones */
+.CapacitacioneSolicitud {
+  padding: 1rem 0 0 0;
+}
+.capacitaciones__content {
+  background: rgb(12, 70, 143);
+  background: -moz-linear-gradient(
+    164deg,
+    rgba(12, 70, 143, 1) 32%,
+    rgba(6, 42, 48, 1) 93%
+  );
+  background: -webkit-linear-gradient(
+    164deg,
+    rgba(12, 70, 143, 1) 32%,
+    rgba(6, 42, 48, 1) 93%
+  );
+  background: linear-gradient(
+    164deg,
+    rgba(12, 70, 143, 1) 32%,
+    rgba(6, 42, 48, 1) 93%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
+  border-radius: 10px;
+  height: 180px;
+  padding: 1rem;
+  .capacitaciones__content__politicies {
+    font-size: 9px;
+    margin: 0;
+    color: var(--white);
+    padding-top: 1rem;
+  }
+  .capacitaciones__content__title {
+    color: var(--white);
+    font-size: 22px;
+  }
+  .capacitaciones__content__form {
+    form {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      input {
+        background-color: #5d5d73a3;
+        border: 0;
+        border-radius: 5px;
+        font-size: 10px;
+        padding: 5px;
+        color: var(--white);
+        &::placeholder {
+          color: var(--white);
+        }
+      }
+      #submit {
+        background-color: var(--blue-button);
+        color: var(--white);
+        font-weight: 500;
+      }
+      #correo {
+        width: 47%;
+      }
+      #datetime,
+      #asistentes {
+        width: 32%;
+        color: var(--white);
+        font-size: 10px;
+      }
+      #asistentes {
+        width: 15%;
+        color: var(--white);
+        font-size: 10px;
+      }
+      #direccion {
+        width: 65%;
+      }
+    }
+  }
+}
+/* Capacitaciones */
+
+/*Tiendas En linea*/
+.TiendasEnLinea {
+  padding: 0rem 1rem;
+  .TiendaEnLinea__Content {
+    border-radius: 10px;
+    background-color: #0c468f;
+
+    .TiendaEnLinea__FG,
+    .TiendaEnLinea__FGM {
+      text-align: center;
+      padding: 1rem;
+      h2 {
+        color: var(--white);
+        font-size: 20px;
+        font-weight: 300;
+        padding: 0;
+        span {
+          font-weight: 700;
+        }
+      }
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
+    .TiendaEnLinea__codigo {
+      color: var(--white);
+      h3 {
+        font-size: 20px;
+      }
+      p {
+        font-size: 10px;
+        text-wrap: balance;
+      }
+      .TiendaEnLinea__codigo__discount {
+        border: 1px solid var(--white);
+        border-style: dashed;
+        width: auto !important;
+        padding: 0.5rem;
+        font-size: 18px;
+        border-radius: 10px;
+        text-transform: uppercase;
+        transform: translateY(-20px);
+        span {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+/*Tiendas En linea*/
