--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,11 @@
+@charset "UTF-8";
 :root {
   --white: #fff !important;
   --blue-button: #0c468f;
+  --grey: #ecebeb;
 }
 
 main {
-  overflow: hidden;
-  overflow-y: none;
-  overflow-x: none;
   padding: 0;
   width: 100vw;
   height: 100vh;
@@ -16,16 +15,18 @@ main .container__tablet {
   height: 100%;
   display: grid;
   grid-template-columns: 0.7fr repeat(5, 1fr) 1.3fr;
-  grid-template-rows: 2.3fr 1.5fr repeat(2, 1fr);
+  grid-template-rows: 2.3fr 1.5fr repeat(4, 1fr);
   gap: 0px 0px;
-  grid-template-areas: "Menu BannerArea BannerArea BannerArea BannerArea BannerArea ContainerCapacitaciones" "Menu CapacitacioneSolicitud CapacitacioneSolicitud CatalogoFG CatalogoValmact Fichas ContainerCapacitaciones" "Menu TiendasEnLinea TiendasEnLinea TiendasEnLinea SobreNosotros SobreNosotros ContainerCapacitaciones" "Menu TiendasEnLinea TiendasEnLinea TiendasEnLinea Merch Merch ContainerCapacitaciones";
+  grid-template-areas: "SideBar BannerArea BannerArea BannerArea BannerArea BannerArea ContainerCapacitaciones" "SideBar CapacitacioneSolicitud CapacitacioneSolicitud CatalogoFG CatalogoValmact Fichas ContainerCapacitaciones" "SideBar TiendasEnLinea TiendasEnLinea TiendasEnLinea SobreNosotros SobreNosotros ContainerCapacitaciones" "SideBar TiendasEnLinea TiendasEnLinea TiendasEnLinea SobreNosotros SobreNosotros ContainerCapacitaciones" "SideBar TiendasEnLinea TiendasEnLinea TiendasEnLinea Merch Merch ContainerCapacitaciones" "SideBar TiendasEnLinea TiendasEnLinea TiendasEnLinea Merch Merch ContainerCapacitaciones";
+}
+main .SideBar {
+  grid-area: SideBar;
 }
 main .BannerArea {
   grid-area: BannerArea;
 }
 main .ContainerCapacitaciones {
   grid-area: ContainerCapacitaciones;
-  background-color: #860e70;
 }
 main .CapacitacioneSolicitud {
   grid-area: CapacitacioneSolicitud;
@@ -38,14 +39,12 @@ main .CatalogoValmact {
 }
 main .SobreNosotros {
   grid-area: SobreNosotros;
-  background-color: #180c84;
 }
 main .TiendasEnLinea {
   grid-area: TiendasEnLinea;
 }
 main .Merch {
   grid-area: Merch;
-  background-color: #0c7284;
 }
 main .Fichas {
   grid-area: Fichas;
@@ -156,7 +155,7 @@ main .Fichas {
 /* Catalogos*/
 .CatalogoFG,
 .CatalogoValmact {
-  padding: 1rem;
+  padding: 1rem 0 1rem 1rem;
 }
 .CatalogoFG .catalog__content,
 .CatalogoValmact .catalog__content {
@@ -213,7 +212,7 @@ main .Fichas {
 }
 
 .Fichas {
-  padding: 1rem;
+  padding: 1rem 0 1rem 1rem;
 }
 .Fichas .catalog__content {
   display: flex;
@@ -263,6 +262,12 @@ main .Fichas {
 }
 
 /* Catalogos*/
+/* Menú */
+.menu {
+  background-color: #0c468f;
+}
+
+/* Menú */
 /* Capacitaciones */
 .CapacitacioneSolicitud {
   padding: 1rem 0 0 0;
@@ -331,7 +336,7 @@ main .Fichas {
 /* Capacitaciones */
 /*Tiendas En linea*/
 .TiendasEnLinea {
-  padding: 0rem 1rem;
+  padding: 0rem 2rem 0 1rem;
 }
 .TiendasEnLinea .TiendaEnLinea__Content {
   border-radius: 10px;
@@ -340,7 +345,7 @@ main .Fichas {
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FG,
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FGM {
   text-align: center;
-  padding: 1rem;
+  padding: 1rem 1rem 1rem 0;
 }
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FG h2,
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__FGM h2 {
@@ -360,17 +365,20 @@ main .Fichas {
      object-fit: cover;
 }
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo {
+  padding: 0.8rem;
   color: var(--white);
 }
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo h3 {
   font-size: 20px;
 }
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo p {
-  font-size: 10px;
+  font-size: 13px;
   text-wrap: balance;
 }
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo .TiendaEnLinea__codigo__discount {
-  border: 1px solid var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-style: dashed;
   width: auto !important;
   padding: 0.5rem;
@@ -378,9 +386,241 @@ main .Fichas {
   border-radius: 10px;
   text-transform: uppercase;
   transform: translateY(-20px);
+  margin: 0;
 }
 .TiendasEnLinea .TiendaEnLinea__Content .TiendaEnLinea__codigo .TiendaEnLinea__codigo__discount span {
   font-weight: 700;
 }
 
-/*Tiendas En linea*//*# sourceMappingURL=main.css.map */
+/*Tiendas En linea*/
+/*Sobre nosotros*/
+.SobreNosotros .SobreNosotros__content {
+  border-radius: 10px;
+  padding: 0.9rem 0.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  position: relative;
+  padding: 0.7rem 1rem;
+}
+.SobreNosotros .SobreNosotros__content .SobreNosotros__background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #2c2e31;
+  z-index: 19;
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.SobreNosotros .SobreNosotros__content .SobreNosotros__propuestaValor {
+  color: var(--white);
+  padding: 0 !important;
+  width: 80%;
+  text-align: left;
+  z-index: 20;
+}
+.SobreNosotros .SobreNosotros__content .SobreNosotros__propuestaValor h2 {
+  font-size: 25px;
+  margin: 0;
+}
+.SobreNosotros .SobreNosotros__content .SobreNosotros__propuestaValor p {
+  font-size: 10px;
+  margin: 0;
+  margin: 0.4rem 0;
+}
+.SobreNosotros .SobreNosotros__content .SobreNosotros__propuestaValor button {
+  text-align: left;
+  background-color: var(--blue-button);
+  color: var(--white);
+  font-weight: 500;
+  border-radius: 5px;
+  font-size: 15px;
+  border: 0;
+}
+.SobreNosotros .SobreNosotros__content .SobreNosotros__play {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 21;
+}
+.SobreNosotros .SobreNosotros__content .SobreNosotros__play svg {
+  width: 3rem;
+  height: 3rem;
+}
+.SobreNosotros .SobreNosotros__content .SobreNosotros__play svg path {
+  fill: var(--white);
+}
+
+/*Sobre nosotros*/
+/*Merch*/
+.Merch .Merch__content {
+  padding: 0.7rem 1rem;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  position: relative;
+  background: rgb(12, 70, 143);
+  background: linear-gradient(164deg, rgb(12, 70, 143) 32%, rgb(6, 42, 48) 93%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
+}
+.Merch .Merch__content .Merch__background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #2c2e31;
+  z-index: 19;
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.Merch .Merch__content .Merch__propuestaValor {
+  color: var(--white);
+  padding: 0 !important;
+  width: 80%;
+  text-align: left;
+  z-index: 20;
+}
+.Merch .Merch__content .Merch__propuestaValor h2 {
+  font-size: 25px;
+  margin: 0;
+}
+.Merch .Merch__content .Merch__propuestaValor p {
+  font-size: 10px;
+  margin: 0;
+  margin: 0.4rem 0;
+}
+.Merch .Merch__content .Merch__propuestaValor button {
+  text-align: left;
+  background-color: var(--blue-button);
+  color: var(--white);
+  font-weight: 500;
+  border-radius: 5px;
+  font-size: 15px;
+  border: 0;
+}
+.Merch .Merch__content .Merch__play {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 21;
+}
+.Merch .Merch__content .Merch__play svg {
+  width: 3rem;
+  height: 3rem;
+}
+.Merch .Merch__content .Merch__play svg path {
+  fill: var(--white);
+}
+
+/*Merch*/
+/*Eventos y Concursos*/
+.ContainerCapacitaciones {
+  padding: 0rem 0 0.5rem 2rem;
+}
+.ContainerCapacitaciones .event__container {
+  background: var(--grey);
+  height: 100%;
+  border-radius: 10px;
+  padding: 0 1rem;
+}
+.ContainerCapacitaciones .event__container .event__title h2 {
+  font-size: 20px;
+  font-weight: 700;
+  margin: 1rem 0;
+}
+.ContainerCapacitaciones .event__container .event__title .event__content {
+  border: 1px solid var(--blue-button);
+  border-radius: 10px;
+  border-left: 10px solid var(--blue-button);
+  justify-content: center;
+  align-items: center;
+  padding: 0 0 1rem 0;
+  margin-bottom: 1rem;
+}
+.ContainerCapacitaciones .event__container .event__title .event__content img {
+  width: 5rem;
+  height: 4rem;
+}
+.ContainerCapacitaciones .event__container .event__title .event__content i {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+.ContainerCapacitaciones .event__container .event__title .event__content a {
+  text-align: left;
+  background-color: var(--blue-button);
+  color: var(--white);
+  font-weight: 500;
+  border-radius: 5px;
+  font-size: 15px;
+  padding: 5px;
+  border: 0;
+}
+.ContainerCapacitaciones .event__container .ranking__sales {
+  text-align: center;
+}
+.ContainerCapacitaciones .event__container .ranking__sales h2 {
+  font-size: 1rem;
+  font-weight: 700;
+}
+.ContainerCapacitaciones .event__container .ranking__sales ul {
+  list-style: decimal;
+  font-weight: 600;
+  font-size: 15px;
+  padding: 15px;
+  margin: 0;
+}
+.ContainerCapacitaciones .event__container .container__boton {
+  width: 100%;
+  text-align: center;
+}
+.ContainerCapacitaciones .event__container .container__boton a {
+  background-color: var(--blue-button);
+  color: var(--white);
+  font-weight: 500;
+  border-radius: 5px;
+  padding: 1rem;
+  width: 100%;
+}
+.ContainerCapacitaciones .event__container .social__media {
+  padding: 0 1rem;
+}
+
+/*Eventos y Concursos*/
+.SideBar {
+  padding: 0 1rem 2rem 0;
+}
+.SideBar .Menu__content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  padding: 1rem;
+  background-color: var(--grey);
+  border-radius: 15px;
+}
+.SideBar .Menu__content .Menu__header,
+.SideBar .Menu__content .Menu__footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  gap: 2rem;
+}
+.SideBar .Menu__content .Menu__header .menu__icon svg,
+.SideBar .Menu__content .Menu__footer .menu__icon svg {
+  width: 3rem;
+  height: 3rem;
+}
+.SideBar .Menu__content .Menu__footer .menu__icon {
+  transform: rotate(90deg);
+}/*# sourceMappingURL=main.css.map */
