--- a/css/main.scss
+++ b/css/main.scss
@@ -1,12 +1,10 @@
 :root {
   --white: #fff !important;
   --blue-button: #0c468f;
+  --grey: #ecebeb;
 }
 
 main {
-  overflow: hidden;
-  overflow-y: none;
-  overflow-x: none;
   padding: 0;
   width: 100vw;
   height: 100vh;
@@ -15,13 +13,18 @@ main {
     height: 100%;
     display: grid;
     grid-template-columns: 0.7fr repeat(5, 1fr) 1.3fr;
-    grid-template-rows: 2.3fr 1.5fr repeat(2, 1fr);
+    grid-template-rows: 2.3fr 1.5fr repeat(4, 1fr);
     gap: 0px 0px;
     grid-template-areas:
-      "Menu BannerArea BannerArea BannerArea BannerArea BannerArea ContainerCapacitaciones"
-      "Menu CapacitacioneSolicitud CapacitacioneSolicitud CatalogoFG CatalogoValmact Fichas ContainerCapacitaciones"
-      "Menu TiendasEnLinea TiendasEnLinea TiendasEnLinea SobreNosotros SobreNosotros ContainerCapacitaciones"
-      "Menu TiendasEnLinea TiendasEnLinea TiendasEnLinea Merch Merch ContainerCapacitaciones";
+      "SideBar BannerArea BannerArea BannerArea BannerArea BannerArea ContainerCapacitaciones"
+      "SideBar CapacitacioneSolicitud CapacitacioneSolicitud CatalogoFG CatalogoValmact Fichas ContainerCapacitaciones"
+      "SideBar TiendasEnLinea TiendasEnLinea TiendasEnLinea SobreNosotros SobreNosotros ContainerCapacitaciones"
+      "SideBar TiendasEnLinea TiendasEnLinea TiendasEnLinea SobreNosotros SobreNosotros ContainerCapacitaciones"
+      "SideBar TiendasEnLinea TiendasEnLinea TiendasEnLinea Merch Merch ContainerCapacitaciones"
+      "SideBar TiendasEnLinea TiendasEnLinea TiendasEnLinea Merch Merch ContainerCapacitaciones";
+  }
+  .SideBar {
+    grid-area: SideBar;
   }
   .BannerArea {
     grid-area: BannerArea;
@@ -29,7 +32,7 @@ main {
   }
   .ContainerCapacitaciones {
     grid-area: ContainerCapacitaciones;
-    background-color: #860e70;
+    // background-color: #860e70;
   }
   .CapacitacioneSolicitud {
     grid-area: CapacitacioneSolicitud;
@@ -45,7 +48,7 @@ main {
   }
   .SobreNosotros {
     grid-area: SobreNosotros;
-    background-color: #180c84;
+    // background-color: #180c84;
   }
   .TiendasEnLinea {
     grid-area: TiendasEnLinea;
@@ -53,7 +56,7 @@ main {
   }
   .Merch {
     grid-area: Merch;
-    background-color: #0c7284;
+    // background-color: #0c7284;
   }
   .Fichas {
     grid-area: Fichas;
@@ -162,7 +165,7 @@ main {
 /* Catalogos*/
 .CatalogoFG,
 .CatalogoValmact {
-  padding: 1rem;
+  padding: 1rem 0 1rem 1rem;
 
   .catalog__content {
     display: flex;
@@ -226,7 +229,7 @@ main {
   }
 }
 .Fichas {
-  padding: 1rem;
+  padding: 1rem 0 1rem 1rem;
   .catalog__content {
     display: flex;
     flex-direction: column;
@@ -289,6 +292,12 @@ main {
   }
 }
 /* Catalogos*/
+
+/* Menú */
+.menu {
+  background-color: #0c468f;
+}
+/* Menú */
 
 /* Capacitaciones */
 .CapacitacioneSolicitud {
@@ -370,7 +379,7 @@ main {
 
 /*Tiendas En linea*/
 .TiendasEnLinea {
-  padding: 0rem 1rem;
+  padding: 0rem 2rem 0 1rem;
   .TiendaEnLinea__Content {
     border-radius: 10px;
     background-color: #0c468f;
@@ -378,7 +387,7 @@ main {
     .TiendaEnLinea__FG,
     .TiendaEnLinea__FGM {
       text-align: center;
-      padding: 1rem;
+      padding: 1rem 1rem 1rem 0;
       h2 {
         color: var(--white);
         font-size: 20px;
@@ -394,16 +403,19 @@ main {
       }
     }
     .TiendaEnLinea__codigo {
+      padding: 0.8rem;
       color: var(--white);
       h3 {
         font-size: 20px;
       }
       p {
-        font-size: 10px;
+        font-size: 13px;
         text-wrap: balance;
       }
       .TiendaEnLinea__codigo__discount {
-        border: 1px solid var(--white);
+        display: flex;
+        justify-content: center;
+        align-items: center;
         border-style: dashed;
         width: auto !important;
         padding: 0.5rem;
@@ -411,6 +423,7 @@ main {
         border-radius: 10px;
         text-transform: uppercase;
         transform: translateY(-20px);
+        margin: 0;
         span {
           font-weight: 700;
         }
@@ -419,3 +432,254 @@ main {
   }
 }
 /*Tiendas En linea*/
+/*Sobre nosotros*/
+.SobreNosotros {
+  .SobreNosotros__content {
+    border-radius: 10px;
+    padding: 0.9rem 0.5rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    position: relative;
+    padding: 0.7rem 1rem;
+    .SobreNosotros__background {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: #2c2e31;
+      z-index: 19;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+    .SobreNosotros__propuestaValor {
+      color: var(--white);
+      padding: 0 !important;
+      width: 80%;
+      text-align: left;
+      z-index: 20;
+
+      h2 {
+        font-size: 25px;
+        margin: 0;
+      }
+      p {
+        font-size: 10px;
+        margin: 0;
+        margin: 0.4rem 0;
+      }
+      button {
+        text-align: left;
+        background-color: var(--blue-button);
+        color: var(--white);
+        font-weight: 500;
+        border-radius: 5px;
+        font-size: 15px;
+        border: 0;
+      }
+    }
+    .SobreNosotros__play {
+      width: 30%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 21;
+      svg {
+        width: 3rem;
+        height: 3rem;
+        path {
+          fill: var(--white);
+        }
+      }
+    }
+  }
+}
+/*Sobre nosotros*/
+/*Merch*/
+.Merch {
+  .Merch__content {
+    padding: 0.7rem 1rem;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    position: relative;
+    background: rgb(12, 70, 143);
+    background: -moz-linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    background: -webkit-linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    background: linear-gradient(
+      164deg,
+      rgba(12, 70, 143, 1) 32%,
+      rgba(6, 42, 48, 1) 93%
+    );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
+    .Merch__background {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-color: #2c2e31;
+      z-index: 19;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+    .Merch__propuestaValor {
+      color: var(--white);
+      padding: 0 !important;
+      width: 80%;
+      text-align: left;
+      z-index: 20;
+
+      h2 {
+        font-size: 25px;
+        margin: 0;
+      }
+      p {
+        font-size: 10px;
+        margin: 0;
+        margin: 0.4rem 0;
+      }
+      button {
+        text-align: left;
+        background-color: var(--blue-button);
+        color: var(--white);
+        font-weight: 500;
+        border-radius: 5px;
+        font-size: 15px;
+        border: 0;
+      }
+    }
+    .Merch__play {
+      width: 30%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 21;
+      svg {
+        width: 3rem;
+        height: 3rem;
+        path {
+          fill: var(--white);
+        }
+      }
+    }
+  }
+}
+/*Merch*/
+/*Eventos y Concursos*/
+.ContainerCapacitaciones {
+  padding: 0rem 0 0.5rem 2rem;
+  .event__container {
+    background: var(--grey);
+    height: 100%;
+    border-radius: 10px;
+    padding: 0 1rem;
+    .event__title {
+      h2 {
+        font-size: 20px;
+        font-weight: 700;
+        margin: 1rem 0;
+      }
+      .event__content {
+        border: 1px solid var(--blue-button);
+        border-radius: 10px;
+        border-left: 10px solid var(--blue-button);
+        justify-content: center;
+        align-items: center;
+        padding: 0 0 1rem 0;
+        margin-bottom: 1rem;
+        img {
+          width: 5rem;
+          height: 4rem;
+        }
+        i {
+          font-size: 14px;
+          margin-bottom: 10px;
+        }
+        a {
+          text-align: left;
+          background-color: var(--blue-button);
+          color: var(--white);
+          font-weight: 500;
+          border-radius: 5px;
+          font-size: 15px;
+          padding: 5px;
+          border: 0;
+        }
+      }
+    }
+    .ranking__sales {
+      text-align: center;
+      h2 {
+        font-size: 1rem;
+        font-weight: 700;
+      }
+      ul {
+        list-style: decimal;
+        font-weight: 600;
+        font-size: 15px;
+        padding: 15px;
+        margin: 0;
+      }
+    }
+    .container__boton {
+      width: 100%;
+      text-align: center;
+      a {
+        background-color: var(--blue-button);
+        color: var(--white);
+        font-weight: 500;
+        border-radius: 5px;
+        padding: 1rem;
+        width: 100%;
+      }
+    }
+    .social__media {
+      padding: 0 1rem;
+    }
+  }
+}
+/*Eventos y Concursos*/
+.SideBar {
+  padding: 0 1rem 2rem 0;
+  .Menu__content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    padding: 1rem;
+    background-color: var(--grey);
+    border-radius: 15px;
+    .Menu__header,
+    .Menu__footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 100%;
+      gap: 2rem;
+      .menu__icon {
+        svg {
+          width: 3rem;
+          height: 3rem;
+        }
+      }
+    }
+    .Menu__footer {
+      .menu__icon {
+        transform: rotate(90deg);
+      }
+    }
+  }
+}
