--- a/css/main.css
+++ b/css/main.css
@@ -350,6 +350,7 @@ main .Fichas {
   padding: 0rem 2rem 0 1rem;
 }
 .TiendasEnLinea .TiendaEnLinea__Content {
+  padding: 0.8rem 0;
   border-radius: 10px;
   background-color: #0c468f;
 }
@@ -442,14 +443,16 @@ main .Fichas {
   margin: 0;
   margin: 0.4rem 0;
 }
-.SobreNosotros .SobreNosotros__content .SobreNosotros__propuestaValor button {
+.SobreNosotros .SobreNosotros__content .SobreNosotros__propuestaValor a {
   text-align: left;
   background-color: var(--blue-button);
   color: var(--white);
   font-weight: 500;
   border-radius: 5px;
   font-size: 15px;
+  padding: 0.3rem;
   border: 0;
+  text-decoration: none;
 }
 .SobreNosotros .SobreNosotros__content .SobreNosotros__play {
   width: 30%;
@@ -507,14 +510,14 @@ main .Fichas {
   margin: 0;
   margin: 0.4rem 0;
 }
-.Merch .Merch__content .Merch__propuestaValor button {
+.Merch .Merch__content .Merch__propuestaValor a {
   text-align: left;
-  background-color: var(--blue-button);
   color: var(--white);
   font-weight: 500;
   border-radius: 5px;
   font-size: 15px;
   border: 0;
+  text-decoration: none;
 }
 .Merch .Merch__content .Merch__play {
   width: 30%;
@@ -600,6 +603,7 @@ main .Fichas {
   border-radius: 5px;
   padding: 1rem;
   width: 100%;
+  text-decoration: none;
 }
 .ContainerCapacitaciones .event__container .social__media {
   padding: 0 1rem;
