--- a/css/main.scss
+++ b/css/main.scss
@@ -1,7 +1,7 @@
 :root {
   --white: #fff !important;
   --blue-button: #0c468f;
-  --grey: #ecebeb;
+  --grey: #f7f7f7;
 }
 
 main {
@@ -27,6 +27,7 @@ main {
     grid-area: SideBar;
   }
   .BannerArea {
+    padding-bottom: 2rem;
     grid-area: BannerArea;
     // background-color: #f345d3;
   }
@@ -55,6 +56,7 @@ main {
     // background-color: #840c40;
   }
   .Merch {
+    padding: 2.5rem 0 0 0;
     grid-area: Merch;
     // background-color: #0c7284;
   }
@@ -68,6 +70,7 @@ main {
 .carousel-inner {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 .carousel_banner {
   width: 100%;
@@ -81,7 +84,10 @@ main {
   position: relative;
   width: 100%;
   height: 100%;
-
+  border-radius: 10px;
+  img {
+    border-radius: 10px;
+  }
   .banner__content__background {
     width: 100%;
     object-fit: cover;
@@ -95,7 +101,7 @@ main {
     z-index: 11;
     top: 0;
     left: 0;
-    padding: 0rem 2rem 4rem 5rem;
+    padding: 0rem 2rem 1rem 5rem;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -112,7 +118,7 @@ main {
       text-wrap: balance;
       color: var(--white);
       font-weight: normal;
-      padding: 0.5rem 0 1rem 0;
+      padding: 0.5rem 0 0rem 0;
       .banner__content__strong {
         font-weight: 600;
       }
@@ -139,8 +145,8 @@ main {
 }
 .carousel_control_arrow {
   position: absolute;
-  bottom: -3px;
-  right: 20px;
+  bottom: -38px;
+  right: 1px;
   width: 60px;
   height: 30px;
   z-index: 13;
@@ -151,7 +157,7 @@ main {
   .carousel-control-prev,
   .carousel-control-next {
     border-radius: 5px;
-    background-color: #0c7284;
+    background-color: var(--blue-button);
     width: 25px;
     height: 25px;
     .carousel-control-next-icon,
@@ -200,12 +206,17 @@ main {
       }
     }
     .catalog__content__image {
+      box-shadow: 2px 4px 35px rgba(0, 0, 0, 0.442), 0px 10px 10px #0000006c;
       width: 120px;
       height: 150px;
       border-radius: 5px;
       object-fit: cover;
       transform: translateY(-1.5rem);
       z-index: 14;
+      transition: all 500ms ease-in-out;
+      &:hover {
+        transform: translateY(-2rem);
+      }
     }
 
     .catalog__content__title {
@@ -260,6 +271,10 @@ main {
       height: 4rem;
       path {
         fill: var(--white);
+      }
+      transition: all 500ms ease-in-out;
+      &:hover {
+        transform: scale(1.1);
       }
     }
     .catalog__content__image {
@@ -325,10 +340,10 @@ main {
   height: 180px;
   padding: 1rem;
   .capacitaciones__content__politicies {
-    font-size: 9px;
+    font-size: 7px;
     margin: 0;
     color: var(--white);
-    padding-top: 1rem;
+    padding-top: 0.5rem;
   }
   .capacitaciones__content__title {
     color: var(--white);
@@ -356,7 +371,7 @@ main {
         font-weight: 500;
       }
       #correo {
-        width: 47%;
+        width: 64%;
       }
       #datetime,
       #asistentes {
@@ -365,7 +380,7 @@ main {
         font-size: 10px;
       }
       #asistentes {
-        width: 15%;
+        width: 31%;
         color: var(--white);
         font-size: 10px;
       }
@@ -381,13 +396,14 @@ main {
 .TiendasEnLinea {
   padding: 0rem 2rem 0 1rem;
   .TiendaEnLinea__Content {
+    padding: 1rem 0;
     border-radius: 10px;
     background-color: #0c468f;
 
     .TiendaEnLinea__FG,
     .TiendaEnLinea__FGM {
       text-align: center;
-      padding: 1rem 1rem 1rem 0;
+      padding: 1rem;
       h2 {
         color: var(--white);
         font-size: 20px;
@@ -469,14 +485,16 @@ main {
         margin: 0;
         margin: 0.4rem 0;
       }
-      button {
+      a {
         text-align: left;
         background-color: var(--blue-button);
         color: var(--white);
         font-weight: 500;
         border-radius: 5px;
         font-size: 15px;
+        padding: 0.3rem;
         border: 0;
+        text-decoration: none;
       }
     }
     .SobreNosotros__play {
@@ -549,14 +567,14 @@ main {
         margin: 0;
         margin: 0.4rem 0;
       }
-      button {
+      a {
         text-align: left;
-        background-color: var(--blue-button);
         color: var(--white);
         font-weight: 500;
         border-radius: 5px;
         font-size: 15px;
         border: 0;
+        text-decoration: none;
       }
     }
     .Merch__play {
@@ -580,6 +598,7 @@ main {
 .ContainerCapacitaciones {
   padding: 0rem 0 0.5rem 2rem;
   .event__container {
+    box-shadow: 2px 4px 15px #bebebe, 0px 0px 10px #ffffff;
     background: var(--grey);
     height: 100%;
     border-radius: 10px;
@@ -615,6 +634,7 @@ main {
           font-size: 15px;
           padding: 5px;
           border: 0;
+          text-decoration: none;
         }
       }
     }
@@ -640,19 +660,21 @@ main {
         color: var(--white);
         font-weight: 500;
         border-radius: 5px;
-        padding: 1rem;
+        padding: 0.5rem;
         width: 100%;
+        text-decoration: none;
       }
     }
     .social__media {
-      padding: 0 1rem;
+      padding: 1rem 0rem;
     }
   }
 }
 /*Eventos y Concursos*/
 .SideBar {
-  padding: 0 1rem 2rem 0;
+  padding: 0 1rem 0rem 1rem;
   .Menu__content {
+    box-shadow: 2px 4px 25px #bebebeba, 0px 0px 20px #ffffff;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -661,6 +683,10 @@ main {
     padding: 1rem;
     background-color: var(--grey);
     border-radius: 15px;
+    a {
+      text-decoration: none;
+      color: var(--blue-button);
+    }
     .Menu__header,
     .Menu__footer {
       display: flex;
@@ -670,6 +696,10 @@ main {
       width: 100%;
       gap: 2rem;
       .menu__icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         svg {
           width: 3rem;
           height: 3rem;
@@ -683,3 +713,31 @@ main {
     }
   }
 }
+/*Footer*/
+footer {
+  background: rgb(12, 70, 143);
+  background: -moz-linear-gradient(
+    164deg,
+    rgba(12, 70, 143, 1) 32%,
+    rgba(6, 42, 48, 1) 93%
+  );
+  background: -webkit-linear-gradient(
+    164deg,
+    rgba(12, 70, 143, 1) 32%,
+    rgba(6, 42, 48, 1) 93%
+  );
+  background: linear-gradient(
+    164deg,
+    rgba(12, 70, 143, 1) 32%,
+    rgba(6, 42, 48, 1) 93%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0c468f",endColorstr="#062a30",GradientType=1);
+  color: var(--white);
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  display: grid;
+  place-content: center;
+  bottom: 0;
+}
+/*Footer*/
